--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                             <tr>
                                 <td style="width:148px;text-align:right; padding-right:10px; font-size:20px;">গ্রাম</td>
                                 <td>
-                                    <font style="font-size:18px;">: বলসতা</font>
+                                    <font style="font-size:18px;">: মালঞ্চ</font>
                                 </td>
                             </tr>
                             <tr>
@@ -154,7 +154,7 @@
                             <tr>
                                 <td style="width:100px;text-align:right; padding-right:10px; font-size:20px;">গ্রাম</td>
                                 <td>
-                                    <font style="font-size:18px;">: বলসতা</font>
+                                    <font style="font-size:18px;">: মালঞ্চ</font>
                                 </td>
                             </tr>
                             <tr>
