--- a/index.html
+++ b/index.html
@@ -237,10 +237,16 @@
                 <td style="text-align:center;">কন্যা</td>
                 <td style="text-align:center;">-</td>
                 
+                </tr>
+            <tr>
+                <td style="text-align:center;">৫</td>
+                <td style="">?মোঃ শওকত আলী</td>
+                <td style="text-align:center;">স্বামভ</td>
+                <td style="text-align:center;">-</td>
             </tr>
             </tr>
                 <td></td>
-                <td colspan="3" style="text-align:right;padding-right:100px;">উত্তরাধিকারীর সংখা <span id="">৪</span>  জন</td>
+                <td colspan="3" style="text-align:right;padding-right:100px;">উত্তরাধিকারীর সংখা <span id="">৫</span>  জন</td>
             </tr>
             </tr>
 
