--- a/index.html
+++ b/index.html
@@ -240,8 +240,8 @@
                 </tr>
             <tr>
                 <td style="text-align:center;">৫</td>
-                <td style="">?মোঃ শওকত আলী</td>
-                <td style="text-align:center;">স্বামভ</td>
+                <td style="">মোঃ শওকত আলী</td>
+                <td style="text-align:center;">স্বামী</td>
                 <td style="text-align:center;">-</td>
             </tr>
             </tr>
